--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "sonner": "^1.0.0"
+    "sonner": "^1.0.0",
+
+    "engines": {
+      "node": "18.x"
+    }
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
