--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "sonner": "^1.0.0",
-
-    "engines": {
-      "node": "18.x"
-    }
+    "sonner": "^1.0.0"
+  },
+  "engines": {
+    "node": ">=18 <19"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
