--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "sonner": "^1.0.0"
   },
   "engines": {
-    "node": ">=18 <19"
+    "node": "24.x"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
